# torres_yardworks

./: .dockerignore  .env.prod.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  LICENSE  README.md  compose.prod.yaml  compose.yaml  entrypoint.sh  main.py  manage.py  pyproject.toml  requirements.txt.bak  tasks.py
.github/workflows/: deploy.yml
docs/: droplet-setup.md
scripts/: backup.sh
static/web_app/css/: animate.min.css  style.css
static/web_app/js/: bootstrap.min.js  imagelightbox.min.js  responsive_bootstrap_carousel.js
torres_web/: asgi.py  context_processors.py  settings.py  urls.py  wsgi.py
web_app/: admin.py  emails.py  forms.py  models.py  urls.py  views.py
web_app/migrations/: 0001_initial.py  0002_clientleads.py  0003_alter_clientleads_address.py  0004_alter_clientleads_date.py  0005_alter_clientleads_date.py  0006_alter_clientleads_date.py  0007_alter_clientleads_phone.py  0008_gallerycategorie.py  0009_galleryupload.py  0010_testimonies.py
web_app/static/web_app/css/: animate.min.css  bootstrap.min.css  font-awesome.min.css  responsive.css  style.css  utilities.css
web_app/static/web_app/js/: custom.js  theme.js  (+4 more)
web_app/templates/web_app/: about.html  base.html  contact.html  gallery.html  index.html  indoor_remodel.html  landscape_design.html  lawn_gardencare.html  outdoor_remodel.html  projects.html  rate_limited.html  request_quote.html  service_construction.html  service_maintenance.html  service_remodel.html  services.html  test.html  thank_you.html
web_app/tests/: __init__.py  test_emails.py  test_forms.py  test_views.py
(+7 files in other folders)
