[project]
name = "torres-yardworks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1",
    "django-environ>=0.12.0",
    "django-import-export>=4.4.0",
    "django-phonenumber-field>=8.4.0",
    "et-xmlfile>=2.0.0",
    "gunicorn>=25.0.2",
    "invoke>=2.2.1",
    "odfpy>=1.4.1",
    "openpyxl>=3.1.5",
    "phonenumbers>=9.0.23",
    "pillow>=12.1.0",
    "xlrd>=2.0.2",
    "xlwt>=1.3.0",
]
